--- a/style.css
+++ b/style.css
@@ -38,11 +38,13 @@ header {
     font-size: 16px;
     margin-right: 63px;
     padding: 27px 6px;
+    text-decoration: none;
 }
 
 .header-container a:hover {
     transition-duration: 0.5s;
     background: #0894d1;
+    border-radius: 50px;
 }
 
 #menu-checkbox {
@@ -51,6 +53,7 @@ header {
 
 ul {
     display: flex;
+    text-decoration: none;
 }
 
 nav {
@@ -63,7 +66,7 @@ nav {
 }
 
 .top-slide {
-    background: url(img/stroki.png) no-repeat;
+    background: url(img/stroki.png);
     background-size: cover;
     padding-top: 240px;
     padding-bottom: 240px;
@@ -75,11 +78,6 @@ nav {
     font-size: 42px;
     text-transform: uppercase;
     padding: 0px 13px;
-}
-
-.top-slide:nth-child(2) {
-    margin-top: 5px;
-    margin-bottom: 15px;
 }
 
 .top-slide p {
@@ -292,10 +290,15 @@ footer .copyright span {
 }
 
 .teoric,
-.practic,
-.tests {
+.practic {
     padding-bottom: 80px;
     border-radius: 2px;
+}
+
+.tests {
+    width: 100%;
+    height: 550px;
+    min-height: 550px;
 }
 
 .parent-container {
@@ -327,6 +330,110 @@ footer .copyright span {
     width: auto;
 }
 
+.animate__animated.animate__zoomIn {
+    --animate-duration: 2s;
+}
+
+#inf {
+    opacity: 0;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+#quiz-container {
+    padding: 2rem 0;
+    width: 100%;
+    min-height: 20rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+#quiz-card {
+    margin: 1rem;
+    width: 100%;
+}
+
+
+/* Question title */
+
+#quiz-card h3 {
+    margin-bottom: 1rem;
+    text-align: center;
+    width: 100%;
+}
+
+#quiz-card div {
+    width: 25%;
+    margin: 0 auto;
+}
+
+
+/* Answers label */
+
+#quiz-card>div>label {
+    background: #0894d1;
+    border-radius: 0.25rem;
+    color: #fff;
+    display: block;
+    margin-bottom: 0.75rem;
+    padding: 0.5rem;
+    text-align: center;
+    transition: 0.15s ease;
+    box-shadow: 0 0 0.25rem #333;
+    cursor: pointer;
+}
+
+
+/* Answers input */
+
+#quiz-card>div>label input {
+    display: none;
+}
+
+
+/* Answer checked */
+
+label.checked {
+    background: rgb(29, 252, 0) !important;
+    color: #000 !important;
+}
+
+
+/* Answer hover */
+
+#quiz-card>div>label:hover {
+    background: rgb(22, 1, 209);
+    box-shadow: 0 0 0.5rem #333;
+}
+
+
+/* Answer click */
+
+#quiz-card>div>label:active {
+    box-shadow: 0 0 0rem #333;
+}
+
+
+/* Answer btn */
+
+#quiz-container button {
+    background: #0894d1;
+    border-radius: 0.5rem;
+    border: none;
+    box-shadow: 0 0 0.25rem #333;
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-weight: bold;
+    margin: 0 auto;
+    padding: 0.5rem 2rem;
+}
+
 @media screen and (max-width:720px) {
     .header-container {
         width: 100%;
@@ -349,6 +456,8 @@ footer .copyright span {
         text-align: center;
         display: block;
         cursor: pointer;
+        position: relative;
+        top: 80px;
         color: #000;
     }
     .toggle-button:after {
@@ -367,11 +476,12 @@ footer .copyright span {
     .main-menu {
         position: relative;
         top: 20px;
-        right: 120px;
+        right: 20px;
     }
     .top-slide {
         padding-top: 130px;
         padding-bottom: 130px;
+        height: 650px;
     }
     .top-slide h2 {
         font-size: 30px;
@@ -396,5 +506,13 @@ footer .copyright span {
     }
     ul.actions.special {
         padding-bottom: 20px;
+    }
+    .animate__animated.animate__zoomIn {
+        --animate-duration: 1s;
+    }
+    .logo {
+        width: 30%;
+        padding-top: 25px;
+        padding-bottom: 25px;
     }
 }
